--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,3 +1,72 @@
 {
-    "welcome": "Bienvenido"
+    "buttons": {
+        "createAccount": "Crear cuenta"
+    },
+    "creatingAccount": "Al crear una cuenta acepto las",
+    "creatingAccountJefa": "Al crear una cuenta, doy fe de que califico para la Comunidad Jefa según el",
+    "email": {
+        "cannot": {
+            "be": {
+                "empty": "El email no puede estar vacío"
+            }
+        }
+    },
+    "fields": {
+        "confirmPassword": "Confirmar contraseña",
+        "email": "Email",
+        "emailExample": "ejemplo@dominio.com",
+        "enterPassword": "Ingresa tu contraseña",
+        "password": "Contraseña",
+        "telephoneNumber": "Número telefónico"
+    },
+    "haveAccount": "¿Ya tienes una cuenta?",
+    "invalid": {
+        "email": "Email inválido",
+        "password": "Contraseña inválida"
+    },
+    "messages": {
+        "aNumber": "Un número",
+        "atLeastCharacter": "Al menos {{ characters }} caracteres",
+        "maximumCharacters": "Máximo {{ characters }} caracteres",
+        "minimumCharacters": "Mínimo {{ characters }} caracteres",
+        "oneLowercaseLetter": "Una letra minúscula",
+        "oneUppercaseLetter": "Una letra mayúscula",
+        "passwordMustBe": "La contraseña debe tener al menos",
+        "specialCharacter": "Un caracter especial",
+        "success": "Éxito"
+    },
+    "password": {
+        "cannot": {
+            "be": {
+                "empty": "El password no puede estar vacío"
+            }
+        }
+    },
+    "passwords": {
+        "do": {
+            "not": {
+                "match": "Las dos contraseñas no coinciden"
+            }
+        }
+    },
+    "privacyPolicy": "Políticas de privacidad",
+    "signInText": "Iniciar sesión",
+    "termsAndConditionsJefa": "Términos y Condiciones de Jefa",
+    "termsAndConditionsCommunityJefa": "Términos y Condiciones de la Comunidad Jefa",
+    "user": {
+        "with": {
+            "this": {
+                "email": {
+                    "exist": "Ya existe un usuario con este email"
+                }
+            }
+        }
+    },
+    "validations": {
+        "areRequired": "Estos campos son requeridos",
+        "confirmPassword": "Las dos contraseñas no coinciden",
+        "invalidEmail": "Por favor ingresa un email válido",
+        "isRequired": "Este campo es requerido",
+        "needAgreeTermsAndConditions": "Necesitas estar de acuerdo con los términos y condiciones"
+    }
 }
